# lambda-rust-arm64

./: Cargo.toml  README.md  musl-build  package.sh
src/: main.rs
